<resources>
    <string name="app_name">Gefins</string>
    <string name="register_title">Nýskráning</string>
    <string name="login_title">Innskráning</string>
    <string name="appname">Gefins</string>
    <string name="settings_title">Stillingar</string>
    <string name="myspace_title">Mitt svæði</string>
    <string name="user_account">User account</string>
    <string name="login">Innskrá</string>
    <string name="register">Nýskrá</string>
    <string name="myspace">Mitt svæði</string>
    <string name="settings">Stillingar</string>
    <string name="log_out">Útskrá</string>
    <string name="new_ad">Ný auglýsing</string>
    <string name="ad_image">Setja inn mynd: </string>
    <string name="ad_register">Skrá</string>
    <string name="email">Netfang</string>
    <string name="password">Lykilorð</string>
    <string name="passwordConfirm">Lykilorð aftur</string>
    <string name="username">Notendanafn</string>
    <string name="newAd">Skrá auglýsingu</string>
    <string name="filter">Sía</string>
    <string name="title">Titill</string>
    <string name="description">Lýsing</string>
    <string name="zip">Póstnúmer</string>
    <string name="category">Flokkur</string>
    <string name="itemLoc">Heimilisfang</string>
    <string name="phone">Sími</string>
    <string name="choosePhoto">Velja mynd</string>
    <string name="photo">Mynd</string>
    <string name="submitAd">Skrá</string>
    <string name="myAds">Mínar auglýsingar</string>
    <string name="inQueueFor">Í röð</string>
    <string name="categories">Flokkar</string>
    <string name="location">Staðsetning</string>
    <string name="viewSortedItems">Leita</string>
    <string name="editAd">Breyta</string>
    <string name="viewad_numberqueue">Fjöldi í röð: </string>
    <string name="viewad_enterqueue">Fara í röð</string>
    <string name="viewad_category">Flokkur: </string>
    <string name="viewad_zip">Póstnúmer: </string>
    <string name="viewad_description">Lýsing: </string>
    <string name="viewad_ownerinfo">Upplýsingar um gefanda:</string>
    <string name="viewad_message">Senda skilaboð</string>
    <string name="viewad_delete">Eyða</string>
    <string name="viewad_edit">Breyta</string>
    <string name="viewad_owner">Notendanafn:</string>
    <string name="viewad_stars">Hnattargjöf:</string>
    <string name="viewad_address">Heimilisfang:</string>
    <string name="viewad_phone">Símanúmer:</string>
    <string name="viewad_email">Netfang:</string>
    <string name="viewad_acceptButton">Samþykkja:</string>
    <string name="viewad_deleteButton">Eyða:</string>
    <string name="send_message">Skrifa skilaboð:</string>
    <string name="message_title">Skilaboð:</string>
    <string name="message_send">Senda</string>
    <string name="cancel">Hætta við</string>
    <string name="ratings_title">Stjörnugjöf:</string>
    <string name="stars">Stjörnur:</string>
    <string name="settings_submit">Staðfesta</string>
    <string name="chosen">Valið:</string>
    <string name="chosenItems"></string>
    <string name="chosenLocs"></string>
    <string name="choose">Velja</string>
    <string name="rvk">Reykjavík</string>
    <string name="kop">Kópavogur</string>
    <string name="grb">Garðabær</string>
    <string name="hfj">Hafnarfjörður</string>
    <string name="mos">Mosfellsbær</string>
    <string name="sel">Seltjarnarnes</string>
    <string name="sudnes">Suðurnes</string>
    <string name="nord">Norðurland</string>
    <string name="vest">Vestfirðir</string>
    <string name="vestland">Vesturland</string>
    <string name="aust">Austurland</string>
    <string name="sudland">Suðurland</string>
    <string name="userInfo_edit">Breyta</string>

    userInfo_edit


    <string name="backTitle"></string>

    <string name="category_furniture">Húsgögn</string>
    <string name="category_clothing">Fatnaður</string>
    <string name="category_kids">Barnavörur</string>
    <string name="category_electronics">Raftæki</string>
    <string name="category_tools">Verkfæri</string>
    <string name="category_commute">Farartæki</string>
    <string name="category_food">Matur</string>
    <string name="category_animals">Dýr</string>
    <string name="viewad_title">Auglýsing</string>
    <string name="viewad_firstinqueue">Fremstur í röð:</string>




    <string-array name="android_dropdown_arrays">
        <item>Flokkur</item>
        <item>Húsgögn</item>
        <item>Fatnaður</item>
        <item>Barnavörur</item>
        <item>Raftæki</item>
        <item>Verkfæri</item>
        <item>Farartæki</item>
        <item>Matur</item>
        <item>Dýr</item>
        <item>Annað</item>
    </string-array>

    <string-array name="stars_dropdown">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>