<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:gravity="center|center_vertical"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="200dp"
        android:gravity="bottom"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_category"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viewad_category"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <ScrollView
            android:id="@+id/categoryContainer"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:fillViewport="true" />

        <TextView
            android:id="@+id/zip_category"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/viewad_zip"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <ScrollView
            android:id="@+id/zipContainer"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:fillViewport="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/viewad_description"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fillViewport="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enterQueue"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="@string/viewad_enterqueue" />

        <TextView
            android:id="@+id/numberQueue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/title_input"
            android:text="@string/viewad_numberqueue"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <ScrollView
            android:id="@+id/numberQueueContainer"
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:fillViewport="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_ownerinfo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/viewad_ownerinfo"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <ScrollView
            android:id="@+id/ownerifoContainer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fillViewport="true" />

    </LinearLayout>

</LinearLayout>