<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="60dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/sort_categories"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/categories"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="60dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/sort_loc"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="345dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chosenSort"
            android:layout_width="match_parent"
            android:layout_height="373dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/sortItemsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:text="@string/viewSortedItems"
        android:textSize="17sp" />

</LinearLayout>
