<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:gravity="center|center_vertical"
    android:layout_height="match_parent" android:layout_width="match_parent"
    android:id="@+id/viewad_owner"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="200dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/earth" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_category"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/viewad_category"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/category_container"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:fillViewport="true" />

        <TextView
            android:id="@+id/item_zip"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/viewad_zip"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/zip_container"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:fillViewport="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ad_name_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scrollbars = "vertical"
            android:fillViewport="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editAd"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/viewad_edit" />

        <Button
            android:id="@+id/deleteAd"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/viewad_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numberQueue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/title_input"
            android:text="@string/viewad_numberqueue"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/numberQueueContainer"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:fillViewport="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_in_queue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/title_input"
            android:text="@string/viewad_firstinqueue"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/first_in_queue_container"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:fillViewport="true" />

        <Button
            android:id="@+id/delete_from_queue"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/accept_from_queue"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

    </LinearLayout>




</LinearLayout>